--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,8 +30,8 @@
 
   <div class="form-group">
     <label for="sleepy">Devoured?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Eaten<br>
-    <input type="radio" name="sleepy" value="0"> Not eaten
+    <input type="radio" name="devoured" value="1" checked> Eaten<br>
+    <input type="radio" name="devoured" value="0"> Not eaten
   </div>
 
   <button type="submit">Add Burger</button>
